--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,8 @@
 server:
-  port: 8080
+  port: 8000
+  servlet:
+    context-path: /graduation
+
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
